--- a/apppolizas/templates/master/masteradmin.html
+++ b/apppolizas/templates/master/masteradmin.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
   <link rel="stylesheet" href="{% static 'css/masteradmin.css' %}" />
-  <link rel="stylesheet" href="{% static 'css/sidebar_admin_compact.css' %}" />
   <link rel="stylesheet" href="{% static 'css/gSide.css' %}" />
 
 
@@ -38,26 +37,33 @@
 
     <nav class="navbar-menu">
       <ul>
-        <li class="{% if request.resolver_match.url_name == 'dashboard' %}activo{% endif %}" style="width: 110%">
-          <a href="">
+        <li class="{% if request.resolver_match.url_name == 'dashboard_admin' %}activo{% endif %}" style="width: 110%">
+          <a href="{% url 'dashboard_admin' %}">
             <img src="{% static 'images/icono1.svg' %}" alt="Icono" class="icono-svg">
             Dashboard
           </a>
         </li>
+
+        {% if user.rol == 'admin' %}
         <li class="{% if request.resolver_match.url_name == 'admin_usuarios' %}activo{% endif %}" style="width: 110%">
-          <a href="">
+          <a href="{% url 'admin_usuarios' %}">
             <img src="{% static 'images/icono2.svg' %}" alt="Icono" class="icono-svg">
-            Polizas
+            Usuarios
           </a>
         </li>
-        <li class="{% if request.resolver_match.url_name == 'admin_socios' %}activo{% endif %}" style="width: 110%">
-          <a href="">
-            <img src="{% static 'images/icono3.svg' %}" alt="Icono" class="icono-svg">
-            Siniestros
-          </a>
+        {% else %}
+        <li class="{% if request.resolver_match.url_name == 'dashboard_analista' %}activo{% endif %}"
+          style="width: 110%">
+          <a href="{% url 'dashboard_analista' %}">...</a>
         </li>
+        {% endif %}
+
       </ul>
     </nav>
+
+
+
+
     <button type="button" id="btnLogout" class="boton"
       style="margin-right: 80px; margin-bottom: 20px; margin-left: 32px;">
       Cerrar Sesión
